--- a/Directory/Midterm/Projects/Projects.html
+++ b/Directory/Midterm/Projects/Projects.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="container">
-                    <a href="./Slideshow/Slideshow.html">
+                    <a href="./Slideshow/Slideshow.html?img=4">
                     <img src="img/table set. attendees TBD.jpeg" class="image"/>
                     <div class="overlay">
                         <div class="text">table set. attendees TBD.</div>
@@ -86,7 +86,7 @@
 
             <div class="column">
             <div class="container">
-                <a href="./Slideshow/Slideshow.html">
+                <a href="./Slideshow/Slideshow.html?img=5">
                 <img src="img/BREATH.jpeg" class="image"/>
                 <div class="overlay">
                     <div class="text">BREATH</div>
@@ -95,7 +95,7 @@
                 </div>
 
             <div class="container">
-                <a href="./Slideshow/Slideshow.html">
+                <a href="./Slideshow/Slideshow.html?img=6">
                 <img src="img/Inner Voice.jpeg" class="image"/>
                 <div class="overlay">
                     <div class="text">Inner Voice</div>
@@ -104,7 +104,7 @@
                 </div>
 
             <div class="container">
-                <a href="./Slideshow/Slideshow.html">
+                <a href="./Slideshow/Slideshow.html?img=7">
                 <img src="img/SPEAK!.jpeg" class="image"/>
                 <div class="overlay">
                     <div class="text">SPEAK!</div>
@@ -114,7 +114,7 @@
     
                 
                 <div class="container">
-                    <a href="./Slideshow/Slideshow.html">
+                    <a href="./Slideshow/Slideshow.html?img=8">
                     <img src="img/Cleansing_ panel 1.jpeg" class="image"/>
                     <div class="overlay">
                         <div class="text">Cleansing (1)</div>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="container">
-                        <a href="./Slideshow/Slideshow.html">
+                        <a href="./Slideshow/Slideshow.html?img=9">
                         <img src="img/Cleansing_ panel two.jpeg" class="image"/>
                         <div class="overlay">
                             <div class="text">Cleansing (2)</div>
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="container">
-                            <a href="./Slideshow/Slideshow.html">
+                            <a href="./Slideshow/Slideshow.html?img=10">
                             <img src="img/Cleansing_ panel three.JPG" class="image"/>
                             <div class="overlay">
                                 <div class="text">Cleansing (3)</div>
