--- a/Directory/Midterm/Projects/Slideshow/Slideshow.html
+++ b/Directory/Midterm/Projects/Slideshow/Slideshow.html
@@ -48,13 +48,19 @@
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="../img/Listen to Her Buzz_ panel one.jpeg" style="width:100%">
-      <div class="text"><i>Listen To Her Buzz </i>(1)</div>
+      <div class="text"><i>Listen To Her Buzz</i>(1)</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext"></div>
       <img src="../img/Listen to Her Buzz_ panel two.jpeg" style="width:100%">
-      <div class="text"><i>Listen To Her Buzz </i>(2)</div>
+      <div class="text"><i>Listen To Her Buzz</i>(2)</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext"></div>
+      <img src="../img/table set. attendees TBD.jpeg" style="width:100%">
+      <div class="text"><i>table set. attendees TBD.</i></div>
     </div>
 
     <div class="mySlides fade">
@@ -74,6 +80,25 @@
         <img src="../img/SPEAK!.jpeg" style="width:100%">
         <div class="text"><i>SPEAK!</i></div>
       </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="../img/Cleansing_ panel 1.jpeg" style="width:100%">
+        <div class="text"><i>Cleansing</i>(1)</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="../img/Cleansing_ panel two.jpeg" style="width:100%">
+        <div class="text"><i>Cleansing</i>(2)</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="../img/Cleansing_ panel three.JPG" style="width:100%">
+        <div class="text"><i>Cleansing</i>(3)</div>
+      </div>
+  
   
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -89,6 +114,10 @@
     <span class="dot" onclick="currentSlide(4)"></span>
     <span class="dot" onclick="currentSlide(5)"></span>
     <span class="dot" onclick="currentSlide(6)"></span>
+    <span class="dot" onclick="currentSlide(7)"></span>
+    <span class="dot" onclick="currentSlide(8)"></span>
+    <span class="dot" onclick="currentSlide(9)"></span>
+    <span class="dot" onclick="currentSlide(10)"></span>
   </div>
 
 </div>
